  TEZ-3484. Tez UI: Remove .travis.yml from webapp folder
  TEZ-3470. Tez UI: Make the build work in IBM PPC
  TEZ-3502. Tez UI: Search in All DAGs page doesn't work with numeric values
  TEZ-3546. Tez UI: On sorting asc - Not Available must be at the top
  TEZ-3555. Tez UI: Build is failing in RHEL6
  TEZ-3570. Tez UI: Wait for sometime before tooltips are displayed

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop
  TEZ-3330. Propagate additional config parameters when running MR jobs via Tez.
  TEZ-3335. DAG client thinks app is still running when app status is null
  TEZ-3460. Fix precommit release audit warning.
  TEZ-3368. NPE in DelayedContainerManager