@@ -57,7 +57,7 @@
     "phantomjs-prebuilt": "2.1.13"
   },
   "dependencies": {
-    "em-helpers": "0.5.14",
+    "em-helpers": "0.6.0",
     "em-table": "0.4.0",
     "em-tgraph": "0.0.9"
   }
